[package]
name = "to_js"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true
codegen-units = 1
strip = "debuginfo"
debug = "line-tables-only"
overflow-checks = true # cf. https://hachyderm.io/@cliffle/111812887172594381

[dependencies]
js_proc_macro = { path = "./js_proc_macro" }

[features]
default = ["proc-macro"]
proc-macro = []
