[package]
name = "to_js"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true
codegen-units = 1
strip = "debuginfo"
debug = "line-tables-only"
overflow-checks = true # cf. https://hachyderm.io/@cliffle/111812887172594381

# Run with: cargo build --target wasm32-unknown-unknown --profile release-debug
[profile.release-debug]
inherits = "release"
debug-assertions = true

[dependencies]
js_proc_macro = { path = "./js_proc_macro" }
miniserde = "0.1" # hopefully i do not regret this. we can always make it a feature...

[features]
default = ["proc-macro"]
proc-macro = []
json = []

