[package]
name = "to_js"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true
codegen-units = 1
strip = "debuginfo"
debug = "line-tables-only"
overflow-checks = true # cf. https://hachyderm.io/@cliffle/111812887172594381

# Run with: cargo build --target wasm32-unknown-unknown --profile release-debug
[profile.release-debug]
inherits = "release"
debug-assertions = true

[dependencies]
js_proc_macro = { path = "./js_proc_macro" }
serde = { version = "1.0", optional = true }
serde_json = { version = "1.0", optional = true }

[features]
default = ["proc-macro"]
proc-macro = []
json = ["dep:serde", "dep:serde_json"]

